@@ -1,10 +1,13 @@
+TAG: vocload-6-0-4-11
 TAG: vocload-6-0-4-10
 TAG: vocload-6-0-4-9
 TAG: vocload-6-0-4-8
-DATE: 06/10/2016, 6/13/2016
+DATE: 06/10/2016, 6/14/2016
 STAFF: lec 
 CHANGES:
 1) TR12345/ECO (Evidence Code Ontology)
+OBOParser.py : must add 'union_of'
+DAG_Label : must add 'used_in'
 
 TAG: vocload-6-0-4-7
 TAG: vocload-6-0-4-6
